# MeshDeform

./: .gitignore  CMakeLists.txt  README.md
demo/: main.cpp
include/: pch.hpp
include/deform/: ARAP.hpp  base.hpp  example.hpp  gui.hpp
src/deform/: ARAP.cpp  example.cpp  gui.cpp
